Last Last final

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     <!--Left img. Icon and button -->
     <section class="row mb-4">
 
-      <img class="col-12 col-md-6 tall p-4" src="assets/tallimg.png" alt="Tall-img">
+      <img class="col-12 col-md-4 tall p-4" src="assets/tallimg.png" alt="Tall-img">
 
-      <div class="col-12 col-md-6 align-self-center pe-4 pt-4">
+      <div class="col-12 col-md-8 align-self-center pe-4 pt-4">
 
         <h2><i class="mdi mdi-google-earth"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ad
           accusamus ex!</h2>
@@ -90,7 +90,7 @@
     <!-- 3 cards 1 bigger. Order change for mob -->
     <section class="row bg-info py-5 text-center justify-content-evenly">
 
-      <div class="card col-12 col-md-3 my-2 order-sm-0 order-1">
+      <div class="card col-12 col-md-3 my-3 order-sm-0 order-1 pt-4">
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ex possimus alias aspernatur magni.</h3>
         <p>Lorem</p>
         <p>Lorem ipsum dolor sit amet.</p>
@@ -109,7 +109,7 @@
         <p class="pb-3">Lorem ipsum dolor sit amet.</p>
       </div>
 
-      <div class="card col-12 col-md-3 my-2 order-sm-2 order-2">
+      <div class="card col-12 col-md-3 my-3 order-sm-2 order-2 pt-4">
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut tempore asperiores dignissimos veniam?</h3>
         <p>Lorem</p>
         <p>Lorem ipsum dolor sit amet.</p>
